--- a/tm_cardmaker.html
+++ b/tm_cardmaker.html
@@ -38,6 +38,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-bar-block w3-white w3-collapse w3-top" style="z-index:3;width:250px" id="mySidebar">
   <div class="w3-large w3-text-grey" style="font-weight:bold">
+    <a class="w3-button w3-block w3-light-grey" href="https://github.com/santororock/tm_cardmaker" target="_blank" rel="noopener noreferrer"><div style="font-size: 0.75em;">TM Cardmaker GitHub Project</div></a>
     <a onclick="myAccFunc('file')" href="javascript:void(0)" class="w3-button w3-block w3-white w3-left-align">
       File <i class="fa fa-caret-down"></i>
     </a>
@@ -119,6 +120,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
       </div>
     </div>
   </div>
+  
 </nav>
 
 <!-- Top menu on small screens -->
