--- a/tm_cardmaker.html
+++ b/tm_cardmaker.html
@@ -148,9 +148,25 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
     </div>
   </div>
   <div class="w3-padding w3-container">
-    <canvas id="cmcanvas" height="1050px" width="750px" style="float:left; border:1px solid #101010;"></canvas>
+    <div id="canvaswrap" style="position:relative; display:inline-block; float:left;">
+      <canvas id="cmcanvas" height="1050px" width="750px" style="border:1px solid #101010;"></canvas>
+      <canvas id="cmcanvas_overlay" class="debug-overlay-canvas"></canvas>
+    </div>
     <a id="projectlink"></a>
     <div style="display:block; float:left; margin: 10px; min-width: 260px;">
+      <div id="debugcontrols" style="margin-bottom:8px;">
+        <label style="white-space:nowrap;"><input id="debugBounds" type="checkbox" onchange="window.debugOverlay && window.debugOverlay.toggle(this.checked)"> Debug bounds</label>
+        <select id="debugMode" onchange="window.debugOverlay && window.debugOverlay.setMode(this.value)">
+          <option value="selected">Selected</option>
+          <option value="all">All</option>
+        </select>
+        <div id="debuglegend" class="debug-legend">
+          <span class="legend-item"><span class="legend-swatch swatch-mask"></span> clickable mask</span>
+          <span class="legend-item"><span class="legend-swatch swatch-tainted"></span> mask unavailable (tainted)</span>
+          <span class="legend-item"><span class="legend-swatch swatch-rect"></span> logical rect</span>
+          <span class="legend-item"><span class="legend-swatch swatch-cross"></span> origin</span>
+        </div>
+      </div>
       <section id="layerlist">
       </section>
       <span class="w3-padding-16"><input id="groupmode" type="checkbox" onchange="groupModeToggle()" class="w3-show-inline-block" >Group Mode</span>
@@ -230,6 +246,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
 <script src="imageFit.js"></script>
 
 <script src="tm_cm.js"></script>
+<script src="tm_debug_overlay.js"></script>
 
 </body>
 </html>
