first working version of the debug overlay

--- a/tm_cardmaker.html
+++ b/tm_cardmaker.html
@@ -246,7 +246,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
 <script src="imageFit.js"></script>
 
 <script src="tm_cm.js"></script>
-<script src="tm_debug_overlay.js"></script>
+<script src="tm_debug_overlay_fixed.js"></script>
 
 </body>
 </html>
