--- a/tm_cardmaker.html
+++ b/tm_cardmaker.html
@@ -244,8 +244,8 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
       <span>'Others' background:<input id="inputobg" type="checkbox" onchange="updateValue(this)"></span><br>
     </div>
     <div id="alltext">
-      <span style="float: right;"><textarea id="inputdata" cols="17" onchange="updateValue(this)"></textarea></span><br>
-      <span style="float: right;">V space:<input id="inputlineSpace" type="number" onchange="updateValue(this)"></span><br>
+      <span style="float: right;"><textarea id="inputdata" cols="17" oninput="updateValue(this)" onchange="updateValue(this)"></textarea></span><br>
+      <span style="float: right;">V space:<input id="inputlineSpace" type="number" oninput="updateValue(this)" onchange="updateValue(this)"></span><br>
       <span style="float: right;">Font:<select id="inputfont" type="select" onchange="updateValue(this)">
         <option value="Prototype" style="font-family: Prototype;" default>Prototype</option>
         <option value="Pagella" style="font-family: Pagella;">Palatino-like</option>
